--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>reveal.js</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/league.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -24,7 +24,24 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
+				<section data-markdown data-background-iframe="https://slides.com">
+					<textarea data-template>
+							## Page title
+
+							A paragraph with some text and a [link](http://hakim.se).
+							![image](https://s-media-cache-ak0.pinimg.com/736x/c3/b5/c8/c3b5c8307723fb364b058e3cea0ace03--grizzly-bears.jpg)
+
+							<p class="fragment grow">grow</p>
+	<p class="fragment shrink">shrink</p>
+	<p class="fragment fade-out">fade-out</p>
+	<p class="fragment fade-up">fade-up (also down, left and right!)</p>
+	<p class="fragment current-visible">visible only once</p>
+	<p class="fragment highlight-current-blue">blue only once</p>
+	<p class="fragment highlight-red">highlight-red</p>
+	<p class="fragment highlight-green">highlight-green</p>
+	<p class="fragment highlight-blue">highlight-blue</p>
+					</textarea>
+				</section>
 				<section>Slide 2</section>
 			</div>
 		</div>
